--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--base color-->
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="colorTitle">#333333</color>
+    <color name="colorSecondTitle">#666666</color>
+    <color name="colorContent">#999999</color>
+    <color name="colorSecondContent">#c6c6c6</color>
+    <color name="bg_gray">#f6f6f6</color>
 </resources>
