--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <!--base color-->
+    <color name="tint_color">#61C6F0</color>
+    <color name="tint_dark_color">#336980</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="colorTitle">#333333</color>
@@ -12,4 +14,5 @@
     <color name="colorContent">#999999</color>
     <color name="colorSecondContent">#c6c6c6</color>
     <color name="bg_gray">#f6f6f6</color>
+    <color name="ripple">#ff21272b</color>
 </resources>
