--- a/app/src/main/res/layout/a_login.xml
+++ b/app/src/main/res/layout/a_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_gray"
@@ -9,12 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@mipmap/splash"/>
+        android:src="@mipmap/splash" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/username_til"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:hintTextAppearance="@style/input_layout_hint">
 
         <EditText
             android:id="@+id/username_edt"
@@ -31,7 +33,8 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/password_til"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:hintTextAppearance="@style/input_layout_hint">
 
         <EditText
             android:id="@+id/password_edt"
@@ -55,9 +58,9 @@
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/login_button"
-            android:layout_margin="10dp"
             android:text="@string/login" />
 
         <Button
