--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,14 @@
     <dimen name="text_size_big_10">28sp</dimen>
     <dimen name="text_size_big_11">29sp</dimen>
     <dimen name="text_size_big_12">30sp</dimen>
+    <!--基础dp-->
+    <dimen name="normal_dp_4">4sp</dimen>
+    <dimen name="normal_dp_8">8sp</dimen>
+    <dimen name="normal_dp_12">12sp</dimen>
+    <dimen name="normal_dp_16">16sp</dimen>
+    <dimen name="normal_dp_20">20sp</dimen>
+    <dimen name="normal_dp_24">24sp</dimen>
+    <dimen name="normal_dp_28">28sp</dimen>
+    <dimen name="normal_dp_32">32sp</dimen>
+
 </resources>
