--- a/app/src/main/res/layout/c_news_list.xml
+++ b/app/src/main/res/layout/c_news_list.xml
@@ -1,7 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/normal_dp_4"
+    android:layout_marginEnd="@dimen/normal_dp_4"
+    android:layout_marginLeft="@dimen/normal_dp_4"
+    android:layout_marginRight="@dimen/normal_dp_4"
+    android:layout_marginStart="@dimen/normal_dp_4"
     android:orientation="vertical">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/normal_dp_12">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/iv_news_avatar"
+            android:layout_width="86dp"
+            android:layout_height="60dp"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/normal_dp_8"
+            android:layout_marginStart="@dimen/normal_dp_8"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_news_title"
+                style="@style/c_news_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            <TextView
+                android:id="@+id/tv_news_content"
+                style="@style/c_news_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/normal_dp_8"
+                android:ellipsize="end"
+                android:maxLines="2" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
