--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,14 @@
         <item name="android:textColor">@color/colorSecondTitle</item>
         <item name="android:textSize">@dimen/text_size_normal_6</item>
     </style>
+
+    <!--news-->
+    <style name="c_news_title">
+        <item name="android:textColor">@color/colorSecondTitle</item>
+        <item name="android:textSize">@dimen/text_size_normal_6</item>
+    </style>
+    <style name="c_news_content">
+        <item name="android:textColor">@color/colorContent</item>
+        <item name="android:textSize">@dimen/text_size_normal_5</item>
+    </style>
 </resources>
