--- a/app/src/main/res/layout/a_news_detail.xml
+++ b/app/src/main/res/layout/a_news_detail.xml
@@ -18,7 +18,7 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv_news_detail_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
