--- a/app/src/main/res/layout/c_image.xml
+++ b/app/src/main/res/layout/c_image.xml
@@ -16,6 +16,9 @@
             android:id="@+id/tv_image_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/normal_dp_8"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:padding="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/primary_text"
@@ -24,7 +27,8 @@
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop" />
 
     </LinearLayout>
 
