--- a/app/src/main/res/layout/f_news_list.xml
+++ b/app/src/main/res/layout/f_news_list.xml
@@ -12,7 +12,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
             app:tabIndicatorColor="@color/white" />
 
     </android.support.design.widget.AppBarLayout>
