--- a/app/src/main/res/layout/a_news_detail.xml
+++ b/app/src/main/res/layout/a_news_detail.xml
@@ -20,7 +20,7 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <com.facebook.drawee.view.SimpleDraweeView
+            <ImageView
                 android:id="@+id/iv_news_detail_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -34,7 +34,6 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
@@ -57,7 +56,7 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center" />
 
             <org.sufficientlysecure.htmltextview.HtmlTextView
                 android:id="@+id/htv_news_detail_content"
