--- a/app/src/main/res/layout/c_news_list.xml
+++ b/app/src/main/res/layout/c_news_list.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         android:padding="@dimen/normal_dp_12">
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/iv_news_avatar"
             android:layout_width="86dp"
             android:layout_height="60dp"
